src/App.css
/* ... */
.editMessage:hover ~ .deleteMessage {
  transform: scale(0.85);
}
.deleteMessage:hover {
  transform: scale(1.125);
}
.message-actions:has(.deleteMessage:hover) .editMessage {
  transform: scale(0.85);
}
.message-actions button {
  border-radius: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.15s ease;  
  border: none;
}
.editMessage {
  display: flex;
  background-color: green;
}
.deleteMessage {
  background-color: red;
}

.message-container.sent .message-text:hover {
  transform: translateX(-2px);
  /* box-shadow: 0px 0px 2px #4ef3ff; */
}
.message-container.sent .message-bubble:has(.message-text:hover) + .message-actions {
  transform: translateX(-2px);
}

.message-container.received .message-text:hover {
  transform: translateX(2px);
  /* box-shadow: 0px 0px 2px #ebebeb; */
}

/* container for the bubble, and username. default styles */
.message-container {
  display: flex;
  /* align-self: flex-start; */
  flex-direction: column;
  width: 100%;
  /* height: 100%; */
  text-align: left;
  /* gap: 0px; */
  
}
.message-container * {
  margin: 0px;
  padding: 0px;
}

/* pushed first message down so messages appear to send from the bottom, up */
.message-container:first-child {
  margin-top: auto;
}

/* User's messages */
.message-container.sent {
  align-items: flex-end;
  background-color: transparent;
}
.message-container.sent .message-bubble {
  /*background-color: #4ebcff;*/
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-start;
  justify-items: flex-start;
  /* align-items: center; */
}
.pfp {
  background-clip: padding-box;
  
}
.message-container.sent .pfp {
  justify-self: flex-start;
  height: 40px;
  margin: 5px 0px 0px 4px;
  border-radius: 10px;
  border: 2px solid transparent;
  border-color: #8c8c8c;
  flex-shrink: 0;
  /* background: transparent; */
}

.message-container.sent:not(.last-in-string) .pfp-replacement {
  justify-self: flex-start;
  height: 40px;
  width: 40px;
  margin: 10px 0px 0px 4px;
  flex-shrink: 0;
  /* background: transparent; */
}

.message-container.sent:not(.last-in-string) {
  padding-right: 7px;
}

.message-container.received:not(.last-in-string) .pfp-replacement {
  justify-self: flex-start;
  height: 40px;
  width: 40px;
  margin: 10px 0px 0px 4px;
  flex-shrink: 0;
  /* background: transparent; */
}

.message-container.received:not(.last-in-string) {
  padding-left: 7px;
}

/* Other people's messages */
.message-container.received {
  align-items: flex-start;
}
.message-container.received .message-bubble {
  /*background-color: #8b8b8b;*/
  display: flex;
  flex-direction: row;
  background: transparent;
  /* align-items: center; */
}
.message-container.received .pfp {
  height: 40px;
  margin: 5px 0px 0px 4px;
  border-radius: 10px;
  border: 2px solid transparent;
  border-color: #8c8c8c;
  flex-shrink: 0;
}

/* .message-container.received .message-bar {
  width: 1px;
  background-color: #a1a0a0;
  margin: 0px 4.5px 0px 0px;
}

.message-container.sent .message-bar {
  width: 1px;
  background-color: #80ceff;
  margin: 0px 0px 0px 4.5px;
}
.message-bar {
  display: hidden;
  align-self: stretch;
} */

.bubbleAndActions {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  width: 100%;
}

.message-container.received .bubbleAndActions {
  flex-direction: row;
}

/* the little username tag underneath the bubble */
.sent-by {
  font-size: smaller;
  color: rgb(48, 48, 48);
  /* text-shadow: 0px 0px 2px rgb(148, 148, 148); */
  margin: 5px 0px 0px 0px;
  padding: 0px;
  /* line-height: 5px; */
}

.message-text {
  flex: 1;
  min-width: 0;
  /*overflow: hidden;*/
  position: relative;

  border-style: solid;
  border-width: 1px;
  border-color: #8c8c8c;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
  display: flex;
  align-items: center;
  background-color: whitesmoke;
  padding: 30px;
  border-radius: 10px;

  transition: transform 0.1s ease;
}

.message-container.sent .message-text {
  background-color: #ffffe3;
}

/*.message-text:after {
	content: '';
	position: absolute;
	right: 0;
	top: 3px;
	width: 0;
	height: 0;
	border: 10px solid transparent;
	border-left-color: red;
	border-right: 0;
	margin-top: 20px;
	margin-right: -3px;
}*/

.message-container:not(.last-in-string) i, .message-container:not(.last-in-string) .message-bubble .pfp {
  display: none;
}

.message-container.last-in-string {
  /* line-height: 1px; */
  /* margin: 0px; */
  /* padding: 0px; */
  margin-bottom: 15px;
}
.message-container.last-in-string .sent-by {
  /* line-height: 1px; */
  margin: 0px;
  padding: 0px;
}
.message-container.sent.last-in-string .sent-by {
  /* line-height: 1px; */
  margin-right: 85px;
}
.message-container.received.last-in-string .sent-by {
  /* line-height: 1px; */
  margin-left: 85px;
}
.message-container.sent.last-in-string .message-text:before {
  display: block;
	content: '';
	position: absolute;
	right: 0;
	top: 3px;
	width: 0;
	height: 0;
	border: 11px solid transparent;
	border-left-color: #8c8c8c;
	border-right: 0;
	margin-top: 9px;
	margin-right: -11px;
}

.message-container.received.last-in-string .message-text:before {
  display: block;
	content: '';
	position: absolute;
	left: 0;
	top: 3px;
	width: 0;
	height: 0;
	border: 11px solid transparent;
	border-right-color: #8c8c8c;
	border-left: 0;
	margin-top: 9px;
	margin-left: -11px;
}

.message-container.sent.last-in-string .message-text:after {
  display: block;
	content: '';
	position: absolute;
	right: 0;
	top: 3px;
	width: 0;
	height: 0;
	border: 10px solid transparent;
	border-left-color: #ffffe3;
	border-right: 0;
	margin-top: 10px;
	margin-right: -10px;
}


.message-container.received.last-in-string .message-text:after {
  display: block;
	content: '';
	position: absolute;
	left: 0;
	top: 3px;
	width: 0;
	height: 0;
	border: 10px solid transparent;
	border-right-color: whitesmoke;
	border-left: 0;
	margin-top: 10px;
	margin-left: -10px;
}
/* ... */

